# bnbb

./: .env  .replit  PROJECT_STATUS.md  cookies.txt  debug-bsc-testnet.js  package-lock.json  package.json  replit.md  start-dual-backends.sh  tailwind.config.ts  test-auth-flow.js  test-bcrypt.js  test-bsc-balance.js
.local/: package-lock.json  package.json  replit.md
.local/.local/share/.cargo/: .global-cache
.local/client/src/: App.tsx
.local/client/src/hooks/: use-real-time.ts
.local/client/src/pages/: admin.tsx  analytics.tsx  bundle-execution.tsx  login.tsx  pnl-dashboard.tsx
.local/client/src/stores/: wallet-store.ts
.local/server/: auth-routes.ts  index.ts  market-data-service.ts  performance-analytics.ts  portfolio-tracker.ts  rpc-resilience.ts  security-middleware.ts  storage.ts  websocket-service.ts
.local/share/.cargo/: .global-cache
client/src/: App.tsx  index.css
client/src/hooks/: use-real-time.ts  useWebSocket.ts
client/src/lib/: network-client.ts
client/src/pages/: analytics.tsx  bundle-execution.tsx  dashboard.tsx  demo-launch.tsx  stealth-funding.tsx  token-launch.tsx
client/src/stores/: system-store.ts
client/src/types/: wallet.ts
server/: auth-routes.ts  auth-service.ts  blockchain-client.ts  bundle-executor.ts  index.ts  job-queue.ts  pnl-service.ts  preset-manager.ts  proxy-service.ts  routes.ts  security-middleware.ts  setup-admin.ts  stealth-patterns.ts  storage-auth.ts  storage.ts  token-service.ts  wallet-service.ts
shared/: schema.ts
simple_backend/: Cargo.toml
simple_backend/src/: main.rs  network.rs
(+341 files in other folders)
